--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -20,36 +20,29 @@
 <body>
 <div class="container text-center">
   <h1 class="animated fadeInDown">欢迎来到《名字待定的》餐厅</h1>
-  <form th:action="@{/User/login}" method="post" class="form-signin">
-      <label>
-          <input type="text" name="username" class="form-control" placeholder="用户名" required autofocus>
-      </label>
-      <label>
-          <input type="password" name="password" class="form-control" placeholder="密码" required>
-      </label>
-      <button class="btn btn-lg btn-primary btn-block" type="submit" >立即登录</button>
-<!--      <div class="row">-->
-<!--          <div class="form-group col-md-4 offset-md-4">-->
-<!--              <label for="inputUsername">账号：</label>-->
-<!--              <input type="text" id="inputUsername" name="username" class="form-control" placeholder="用户名" required autofocus>-->
-<!--          </div>-->
-<!--          <div class="form-group col-md-4 offset-md-4">-->
-<!--              <label for="inputPassword">密码：</label>-->
-<!--              <input type="password" id="inputPassword" name="password" class="form-control" placeholder="密码" required>-->
-<!--          </div>-->
-<!--      </div>-->
-<!--      <div class="row">-->
-<!--          <div class="form-group col-md-4">-->
-<!--              <button class="btn btn-lg btn-primary btn-block" type="submit">立即登录</button>-->
-<!--          </div>-->
-<!--          <button class="btn btn-info " th:onclick="location.href ='@{/register}'">用户注册</button>-->
-<!--      </div>-->
-<!--  </form>-->
+  <form th:action="@{/User/login}" method="post" class="form-horizontal">
+      <div class="form-group">
+          <label for="username" class="col-sm-2 col-sm-offset-1 control-label ">用户名:</label>
+          <div class="col-sm-5">
+              <input type="text" class="form-control" id="username" name="username" required placeholder="用户名">
+          </div>
+      </div>
+      <div class="form-group col-sm-offset-1">
+          <label for="password" class="col-sm-2 col-sm-offset-1 control-label">密码:</label>
+          <div class="col-sm-5">
+              <input type="password" class="form-control" id="password" name="password" required placeholder="密码">
+          </div>
+      </div>
+      <div class="form-group">
+          <div class="col-sm-offset-2 col-sm-7">
+              <button type="submit" class="btn btn-primary">登录</button>
+              <button class ="btn btn-info" th:onclick="location.href ='@{/register}'">注册</button>
+          </div>
+      </div>
+  </form>
 
-
-  <button class="btn btn-info" th:onclick="location.href ='@{/register}'">用户注册</button>
   <button class="btn btn-warning" th:onclick="location.href ='@{/adminLogin}'">管理员登录</button>
   <button class="btn btn-success" th:onclick="location.href ='@{/merchantLogin}'">商家登录</button>
-</div>
+
 </body>
 </html>
