完成商家登录页面与逻辑，完成商家查看订单与接单，配送，完单功能，查看订单详情功能。

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -36,13 +36,12 @@
       <div class="form-group">
           <div class="col-sm-offset-2 col-sm-7">
               <button type="submit" class="btn btn-primary">登录</button>
-              <button class ="btn btn-info" th:onclick="location.href ='@{/register}'">注册</button>
           </div>
       </div>
   </form>
-
-  <button class="btn btn-warning" th:onclick="location.href ='@{/adminLogin}'">管理员登录</button>
-  <button class="btn btn-success" th:onclick="location.href ='@{/merchantLogin}'">商家登录</button>
+  <a class="btn btn-info" href="/userRigView">用户注册</a>
+  <a class="btn btn-warning" href="/merchantLogin">商家登录</a>
+  <button class="btn btn-success" th:onclick="location.href ='@{/merchantLogin}'">管理员登录</button>
 
 </body>
 </html>
