--- a/src/main/resources/templates/userRigView.html
+++ b/src/main/resources/templates/userRigView.html
@@ -8,10 +8,9 @@
   <script th:src="@{/asserts/bootstrap-3.3.7-dist/js/bootstrap.js}"></script>
   <title>用户注册</title>
 </head>
-<body>
-<div class="container">
+<body><div class="container">
   <h2 class="text-center">用户注册</h2>
-  <form th:action="@{/register}" method="post" class="form-signin">
+  <form id="registerForm" th:action="@{/User/register}" method="post" class="form-signin">
     <div class="form-group">
       <label for="username">用户名</label>
       <input type="text" id="username" name="username" class="form-control" placeholder="用户名" required autofocus>
@@ -24,10 +23,31 @@
       <label for="confirmPassword">确认密码</label>
       <input type="password" id="confirmPassword" name="confirmPassword" class="form-control" placeholder="确认密码" required>
     </div>
-    <button class="btn btn-lg btn-primary btn-block" type="submit">立即注册并登录</button>
+    <div class="form-group">
+      <label for="phone">电话号码</label>
+      <input type="text" id="phone" name="phone" class="form-control" placeholder="电话号码" required>
+    </div>
+    <div class="form-group">
+      <label for="address">配送地址</label>
+      <input type="text" id="address" name="address" class="form-control" placeholder="配送地址" required>
+    </div>
+    <button type="button" class="btn btn-info" onclick="validateForm()">立即注册</button>
   </form>
   <br>
-  <button class="btn btn-default" th:onclick="location.href='@{/}'">返回</button>
+  <a class="btn btn-default" href="/">返回</a>
 </div>
+
+<script>
+  function validateForm() {
+    var password = document.getElementById("password").value;
+    var confirmPassword = document.getElementById("confirmPassword").value;
+
+    if (password !== confirmPassword) {
+      alert("两次输入的密码不一致，请重新输入！");
+      return false;
+    }
+    document.getElementById("registerForm").submit();
+  }
+</script>
 </body>
 </html>
