--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -19,7 +19,7 @@
 </head>
 <body>
 <div class="container text-center">
-  <h1 class="animated fadeInDown">欢迎来到《名字待定的》餐厅</h1>
+  <h1 class="animated fadeInDown">欢迎来到湖北大学餐厅</h1>
   <form th:action="@{/User/login}" method="post" class="form-horizontal">
       <div class="form-group">
           <label for="username" class="col-sm-2 col-sm-offset-1 control-label ">用户名:</label>
